syntax = "proto3";
package netdesign2;
option java_package = "top.focess.netdesign.proto";
option optimize_for = LITE_RUNTIME;

import "google/protobuf/any.proto";

message Packet {
  int32 packetId = 1;
  google.protobuf.Any content = 2;
}

//packet id = 0
message ServerStatusRequest {
  optional string clientPublicKey = 1;
}

//packet id = 1
message ServerStatusResponse {
  bool online = 1;
  bool registrable = 2;
  optional string serverPublicKey = 3;
}

//packet id = 6
message ServerStatusUpdateRequest {
}

//packet id = 7
message ServerStatusUpdateResponse {
  bool online = 1;
  bool registrable = 2;
}

//packet id = 2
message LoginPreRequest {
  string username = 1;
}

//packet id = 3
message LoginPreResponse {
  string challenge = 1;
}

//packet id = 4
message LoginRequest{
  string username = 1;
  string hashPassword = 2;
}

//packet id = 5
message LoginResponse {
  bool logined = 1;
}

message Contact {
  int32 id = 1;
  string name = 2;
  bool online = 3;
  ContactType type = 4;
  repeated Contact members = 5; // optional, only if type is GROUP

  enum ContactType {
    FRIEND = 0;
    GROUP = 1;
    MEMBER = 2;
  }
}

//packet id = 8
message ContactListRequest {
}

//packet id = 9
message ContactListResponse {
  repeated Contact contacts = 1;
}

//packet id = 10
message ContactRequest {
  int32 id = 1;
}

//packet id = 11
message ContactResponse {
  Contact contact = 1;
}
